[package]
name = "yandex_lyceum_contest"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
path = "src/04_12_2019-10_12_2019/main.rs"
name = "minerals"

